# recsys-text-benchmark

./: .gitignore  README.md  pyproject.toml
src/recsys_text_benchmark/: __init__.py  benchmark.py
