[project]
name = "recsys-text-benchmark"
version = "0.1.0"
description = "TF-IDF vs Ollama embeddings benchmark for recommendation ranking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.15.0",
    "tqdm>=4.67.0",
]

[project.scripts]
recsys-bench = "recsys_text_benchmark.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
