[project]
name = "recsys-text-benchmark"
version = "0.1.0"
description = "TF-IDF vs Ollama embeddings benchmark for recommendation ranking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.2",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "tqdm==4.67.3",
]

[project.scripts]
recsys-bench = "recsys_text_benchmark.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
