[project]
name = "recsys-text-benchmark"
version = "0.1.0"
description = "TF-IDF vs Ollama embeddings benchmark for recommendation ranking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.2",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "tqdm==4.67.3",
]

[project.scripts]
recsys-bench = "recsys_text_benchmark.benchmark:main"

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "ruff==0.11.2",
]

[tool.ruff]
line-length = 99
required-version = "0.11.2"
target-version = "py311"

[tool.ruff.lint]
dummy-variable-rgx = "^_$"
select = ["ALL"]
ignore = [
    "ANN",
    "ARG",
    "BLE001",
    "COM812",
    "D",
    "E402",
    "E501",
    "EM",
    "FBT",
    "FIX",
    "G",
    "I001",
    "INP001",
    "ISC001",
    "NPY002",
    "PLR0913",
    "PLR2004",
    "Q",
    "RUF100",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF010",
    "RUF022",
    "S105",
    "S311",
    "S310",
    "S324",
    "TC",
    "T201",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    "TRY400",
    "TRY401",
    "UP035",
    "W292",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Depends",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Security",
]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
strict_optional = true
exclude = ["tests/", "migrations/"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
